# internal-api-server-test

./: Dockerfile  Makefile  pyproject.toml  skaffold.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-publish.yml  python-app.yml
k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  myservice.yaml  service.yaml
myservice/: service.py  test_service.py
